--- a/package.json
+++ b/package.json
@@ -40,8 +40,15 @@
     "eslint": "eslint src --cache --ext .ts",
     "eslint:fix": "yarn eslint --fix",
     "fix": "run-s ts:check eslint:fix prettier:fix",
+    "postversion": "run-s postversion:push:tags postversion:publish postversion:push postversion:echo",
+    "postversion:echo": "echo \"Successfully released version $npm_package_version!\"",
+    "postversion:publish": "yarn publish --access public --new-version $npm_package_version",
+    "postversion:push": "git push",
+    "postversion:push:tags": "yarn postversion:push --tags",
     "prettier": "prettier '**/*.{json,ts}' --check",
     "prettier:fix": "yarn prettier --write",
+    "prepare": "npm run build",
+    "preversion": "run-s fix build",
     "copy-template": "cp src/template.hbs dist",
     "ts": "tsc",
     "ts:build": "yarn ts --build",
