--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "@wavevision/sprites-constants-generator-plugin",
   "version": "0.1.0",
   "description": "Webpack plugin to generate PHP constants from SVG sprite symbol IDs.",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "dist",
+  "types": "dist",
   "author": "Wavevision s.r.o. <info@wavevision.com>",
   "contributors": [
     {
