--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "@wavevision/sprites-constants-generator-plugin",
   "version": "0.3.0",
   "description": "Webpack plugin to generate PHP constants from SVG sprite symbol IDs.",
-  "main": "dist/cjs",
-  "module": "dist/esm",
-  "types": "dist/types",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
+  "types": "dist/types/index.d.ts",
   "author": "Wavevision s.r.o. <info@wavevision.com>",
   "contributors": [
     {
