--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "@wavevision/sprites-constants-generator-plugin",
   "version": "0.4.0",
   "description": "Webpack plugin to generate PHP constants from SVG sprite symbol IDs.",
-  "main": "dist/cjs/index.js",
-  "types": "dist/types/index.d.ts",
+  "main": "dist/index.js",
+  "types": "dist/types",
   "files": [
     "dist"
   ],
