--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "@wavevision/coding-standard/ts/tsconfig.json",
   "compilerOptions": {
+    "allowSyntheticDefaultImports": true,
     "allowJs": false,
     "declaration": true,
     "declarationDir": "dist/types",
