--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   },
   "homepage": "https://github.com/wavevision/sprites-constants-generator-plugin",
   "dependencies": {
-    "@wavevision/ts-utils": "^0.3.3",
+    "@wavevision/ts-utils": "^0.4.0",
     "cheerio": "^1.0.0-rc.3",
     "handlebars": "^4.5.1",
     "json-schema": "^0.2.5",
@@ -35,7 +35,7 @@
     "@types/cheerio": "^0.22.13",
     "@types/jest": "^24.0.22",
     "@types/lodash.camelcase": "^4.3.6",
-    "@types/node": "^12.12.5",
+    "@types/node": "12",
     "@types/svg-sprite-loader": "^3.9.1",
     "@types/webpack": "^4.39.8",
     "@types/webpack-dev-server": "^3.4.0",
@@ -57,8 +57,8 @@
     "webpack-cli": "^3.3.10"
   },
   "peerDependencies": {
-    "svg-sprite-loader": "^4.1.6",
-    "svgxuse": "^1.2.6"
+    "svg-sprite-loader": "^4.x",
+    "svgxuse": "^1.x"
   },
   "scripts": {
     "build": "NODE_ENV=production run-s clean ts:build template",
