--- a/package.json
+++ b/package.json
@@ -45,7 +45,6 @@
     "eslint": "^7.12.1",
     "eslint-plugin-jest": "^24",
     "jest": "^26.6.1",
-    "nock": "^13.0.4",
     "npm-run-all": "^4.1.5",
     "svg-sprite-loader": "^5.0.0",
     "ts-jest": "^26.4.3",
@@ -56,8 +55,11 @@
     "webpack-cli": "^4.1.0"
   },
   "peerDependencies": {
-    "svg-sprite-loader": "^5.x",
-    "svgxuse": "^1.x"
+    "@types/node": "12.x",
+    "@types/webpack": "4.x",
+    "svg-sprite-loader": "5.x",
+    "svgxuse": "1.x",
+    "webpack": "4.x"
   },
   "scripts": {
     "build": "NODE_ENV=production run-s clean ts-build template",
