Fix npm scripts

--- a/package.json
+++ b/package.json
@@ -68,11 +68,11 @@
     "eslint": "eslint src tests --cache --ext .ts",
     "eslint-fix": "yarn eslint --fix",
     "fix": "run-s ts-check eslint-fix prettier-fix test",
-    "postversion": "run-s postversion-push:tags postversion-publish postversion-push postversion-echo",
+    "postversion": "run-s postversion-push-tags postversion-publish postversion-push postversion-echo",
     "postversion-echo": "echo \"Successfully released version $npm_package_version!\"",
     "postversion-publish": "yarn publish --access public --new-version $npm_package_version",
     "postversion-push": "git push",
-    "postversion-push:tags": "yarn postversion_push --tags",
+    "postversion-push-tags": "yarn postversion-push --tags",
     "prettier": "prettier '**/*.ts' --check",
     "prettier-fix": "yarn prettier --write",
     "prepare": "npm run build",
