Migrate to GitHub Actions

--- a/package.json
+++ b/package.json
@@ -40,8 +40,7 @@
     "@types/webpack": "^4.41.24",
     "@types/webpack-dev-server": "^3.11.0",
     "@types/webpack-env": "^1.15.3",
-    "@wavevision/coding-standard": "^5.2.1",
-    "coveralls": "^3.1.0",
+    "@wavevision/coding-standard": "^6.0.2",
     "eslint": "^7.12.1",
     "eslint-plugin-jest": "^24",
     "jest": "^26.6.1",
@@ -55,15 +54,15 @@
     "webpack-cli": "^4.1.0"
   },
   "peerDependencies": {
-    "@types/node": "12.x",
-    "@types/webpack": "4.x",
-    "svg-sprite-loader": "5.x",
-    "svgxuse": "1.x",
-    "webpack": "4.x"
+    "@types/node": "^12",
+    "@types/webpack": "^4",
+    "svg-sprite-loader": "^5",
+    "svgxuse": "^1",
+    "webpack": "^4"
   },
   "scripts": {
     "build": "NODE_ENV=production run-s clean ts-build template",
-    "ci": "run-s ts-check eslint prettier test-coverage-report",
+    "ci": "run-s ts-check eslint prettier test-coverage",
     "clean": "rm -rf dist/*",
     "eslint": "eslint src tests --cache --ext .ts",
     "eslint-fix": "yarn eslint --fix",
@@ -73,14 +72,13 @@
     "postversion-publish": "yarn publish --access public --new-version $npm_package_version",
     "postversion-push": "git push",
     "postversion-push-tags": "yarn postversion-push --tags",
-    "prettier": "prettier '**/*.ts' --check",
+    "prettier": "prettier '**/*.{js,json,md,ts}' --check",
     "prettier-fix": "yarn prettier --write",
     "prepare": "npm run build",
     "preversion": "yarn fix",
     "template": "cp src/template.hbs dist",
     "test": "jest --runInBand",
     "test-coverage": "yarn test --coverage",
-    "test-coverage-report": "yarn test-coverage && cat temp/coverage/lcov.info | coveralls",
     "ts": "tsc",
     "ts-build": "yarn ts --project tsconfig.build.json",
     "ts-check": "yarn ts --noEmit",
